2017-11-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Install appstream metadata to non-deprecated location

	Fixes bgo 790076, thanks to Jeremy Bicha
	<URL:https://bugzilla.gnome.org/show_bug.cgi?id=790076>

	* Makefile.am: install balsa.appdata.xml in $(datarootdir)/metainfo.
	* meson.build: ditto.

2017-11-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Old glib-genmarshal has no --output option

	Thanks to Jack for the report
	<URL:https://mail.gnome.org/archives/balsa-list/2017-November/msg00003.html>

	* libbalsa/imap/meson.build: use the 'capture' option of
	customtarget, because the old glib-genmarshal has no --output
	option.
	* libbalsa/meson.build: ditto.

2017-09-30  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove unused make_gradient function, and build with
	quote-color.[ch] only if spell-checker == internal

	* src/Makefile.am: move quote-color.[ch] to
	balsa_spell_extra[,_dist]
	* src/meson.build: move quote-color.[ch] to balsa_spell_extra
	* src/quote-color.c: remove unused make_gradient function.
	* src/quote-color.h: ditto.

2017-09-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/meson.build: fix prefix in marshal files.
	* libbalsa/meson.build: ditto.

2017-09-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/meson.build: fix basename of marshal files.
	* libbalsa/meson.build: ditto.

2017-09-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* meson.build: .split() strings returned by custom config commands.

2017-09-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use gnome.genmarshal if glib is new enough

	* meson.build: check whether glib version >= 2.53.4.
	* libbalsa/imap/meson.build: use gnome.genmarshal if glib is new
	enough; otherwise, use glib-genmarshal directly instead of in a
	sh command.
	* libbalsa/meson.build: ditto.

2017-09-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use --output option of glib-genmarshal

	* libbalsa/imap/meson.build:
	* libbalsa/meson.build: