@@ -6,7 +6,6 @@ foreach dir : subdirs
 endforeach
 
 # balsa_logo.png used by About menu (small one).
-# balsa-logo.png used by the init-druid
 balsa_imgs = [
   'attachment.png',
   'balsa-top.png',
